src/objects/Skin_Abnormality__c/Skin_Abnormality__c.object-meta.xml
<CustomObject>
    <label>Skin Abnormality</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Skin Abnormality Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Skin Abnormality</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>