src/objects/Skin_Abnormality__c/fields/Abnormality_Type__c.field-meta.xml
<CustomField>
    <fullName>Abnormality_Type__c</fullName>
    <label>Abnormality Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Atypical Lesion</fullName>
            </value>
            <value>
                <fullName>Non-Pressure Ulcer</fullName>
            </value>
            <value>
                <fullName>Pressure Ulcer</fullName>
            </value>
            <value>
                <fullName>Rash</fullName>
            </value>
            <value>
                <fullName>Skin Tear</fullName>
            </value>
            <value>
                <fullName>Laceration</fullName>
            </value>
            <value>
                <fullName>Abrasion</fullName>
            </value>
            <value>
                <fullName>Surgical Wound</fullName>
            </value>
            <value>
                <fullName>Deep Tissue Injury (DTI)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>