src/objects/Skin_Abnormality__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Abnormality_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Asymmetry</fullName>
            </value>
            <value>
                <fullName>Bleeding</fullName>
            </value>
            <value>
                <fullName>Border Irregularity</fullName>
            </value>
            <value>
                <fullName>Bulla</fullName>
            </value>
            <value>
                <fullName>Clear Drainage</fullName>
            </value>
            <value>
                <fullName>Color Variegation &gt;1/3 Inch</fullName>
            </value>
            <value>
                <fullName>Dressing Present</fullName>
            </value>
            <value>
                <fullName>Dry and Intact</fullName>
            </value>
            <value>
                <fullName>Erythematous</fullName>
            </value>
            <value>
                <fullName>Eschar</fullName>
            </value>
            <value>
                <fullName>Granulated</fullName>
            </value>
            <value>
                <fullName>Indurated</fullName>
            </value>
            <value>
                <fullName>Necrotic</fullName>
            </value>
            <value>
                <fullName>Plaque</fullName>
            </value>
            <value>
                <fullName>Purulent Drainage</fullName>
            </value>
            <value>
                <fullName>Pustule</fullName>
            </value>
            <value>
                <fullName>Vesicular</fullName>
            </value>
            <value>
                <fullName>Wheal</fullName>
            </value>
            <value>
                <fullName>Evidence of resurfaced full-thickness pressure ulcer</fullName>
            </value>
            <value>
                <fullName>Evidence of resurfaced pressure ulcer of undetermined thickness</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>