src/objects/Skin_Abnormality__c/fields/Left_Right__c.field-meta.xml
<CustomField>
    <fullName>Left_Right__c</fullName>
    <label>Left/Right</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Left</fullName>
            </value>
            <value>
                <fullName>Right</fullName>
            </value>
            <value>
                <fullName>Bilateral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>