src/objects/Skin_Abnormality__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Abnormality_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Thigh</fullName>
            </value>
            <value>
                <fullName>Lower Leg</fullName>
            </value>
            <value>
                <fullName>Ankle</fullName>
            </value>
            <value>
                <fullName>Midfoot/Heel</fullName>
            </value>
            <value>
                <fullName>Foot</fullName>
            </value>
            <value>
                <fullName>Head</fullName>
            </value>
            <value>
                <fullName>Elbow</fullName>
            </value>
            <value>
                <fullName>Upper Back</fullName>
            </value>
            <value>
                <fullName>Lower Back</fullName>
            </value>
            <value>
                <fullName>Sacral</fullName>
            </value>
            <value>
                <fullName>Hip</fullName>
            </value>
            <value>
                <fullName>Buttock</fullName>
            </value>
            <value>
                <fullName>Heel</fullName>
            </value>
            <value>
                <fullName>Contigous Back</fullName>
            </value>
            <value>
                <fullName>Buttock and Hip</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>