src/objects/Skin_Abnormality__c/fields/New_Wound_Ulcer__c.field-meta.xml
<CustomField>
    <fullName>New_Wound_Ulcer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Wound/Ulcer</label>
    <type>Checkbox</type>
</CustomField>