src/objects/Skin_Abnormality__c/fields/Other_Location__c.field-meta.xml
<CustomField>
    <fullName>Other_Location__c</fullName>
    <description>When Location is Other, user can enter text here in this Other Location.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Other Location</label>
    <length>15</length>
    <type>Text</type>
</CustomField>