src/objects/Skin_Abnormality__c/fields/Severity_Stage__c.field-meta.xml
<CustomField>
    <fullName>Severity_Stage__c</fullName>
    <label>Severity/Stage</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Abnormality_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Breakdown of Skin</fullName>
            </value>
            <value>
                <fullName>Fat Layer Exposed</fullName>
            </value>
            <value>
                <fullName>Muscle Necrosis</fullName>
            </value>
            <value>
                <fullName>Bone Necrosis</fullName>
            </value>
            <value>
                <fullName>Unspecified</fullName>
            </value>
            <value>
                <fullName>Stage I</fullName>
            </value>
            <value>
                <fullName>Stage II</fullName>
            </value>
            <value>
                <fullName>Stage III</fullName>
            </value>
            <value>
                <fullName>Stage IV</fullName>
            </value>
            <value>
                <fullName>Un-Stagable</fullName>
            </value>
            <value>
                <fullName>Deep Tissue Injury</fullName>
            </value>
            <value>
                <fullName>Un-Stageable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>