src/objects/Skin_Abnormality__c/fields/Size_LxWxD_H__c.field-meta.xml
<CustomField>
    <fullName>Size_LxWxD_H__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Size (mm) LxWxD/H</label>
    <length>80</length>
    <type>Text</type>
</CustomField>