src/objects/Skin_Abnormality__c/fields/SOAP_Note__c.field-meta.xml
<CustomField>
    <fullName>SOAP_Note__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Soap Note</label>
    <referenceTo>SOAP_Note__c</referenceTo>
    <relationshipLabel>Skin Abnormality</relationshipLabel>
    <relationshipName>Skin_Abnormality</relationshipName>
    <type>Lookup</type>
</CustomField>