src/objects/Skin_Abnormality__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Under Treatment</fullName>
            </value>
            <value>
                <fullName>New Wound/Ulcer</fullName>
            </value>
            <value>
                <fullName>Unable to Assess</fullName>
            </value>
            <value>
                <fullName>Entered in Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>