src/objects/Skin_Abnormality__c/fields/Unable_to_Assess__c.field-meta.xml
<CustomField>
    <fullName>Unable_to_Assess__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unable to Assess</label>
    <type>Checkbox</type>
</CustomField>