src/objects/Skin_Abnormality__c/fields/Under_Treatment__c.field-meta.xml
<CustomField>
    <fullName>Under_Treatment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Under Treatment</label>
    <type>Checkbox</type>
</CustomField>